src/parser/snapshots/rbx_rsml__parser__tests__macro_selector_undefined_dropped.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Rule {
        selectors: Some(
            [
                MacroCall {
                    name: Node {
                        token: SpannedToken(
                            0,
                            MacroCallIdentifier(
                                Some(
                                    "Missing",
                                ),
                            ),
                            8,
                        ),
                        leading_trivia: None,
                    },
                    body: Some(
                        Delimited {
                            left: Node {
                                token: SpannedToken(
                                    8,
                                    ParensOpen,
                                    9,
                                ),
                                leading_trivia: None,
                            },
                            content: Some(
                                [],
                            ),
                            right: Some(
                                Node {
                                    token: SpannedToken(
                                        9,
                                        ParensClose,
                                        10,
                                    ),
                                    leading_trivia: None,
                                },
                            ),
                        },
                    ),
                },
                Token(
                    Node {
                        token: SpannedToken(
                            10,
                            Comma,
                            11,
                        ),
                        leading_trivia: None,
                    },
                ),
                Token(
                    Node {
                        token: SpannedToken(
                            12,
                            Identifier(
                                "Frame",
                            ),
                            17,
                        ),
                        leading_trivia: None,
                    },
                ),
            ],
        ),
        body: Some(
            Delimited {
                left: Node {
                    token: SpannedToken(
                        18,
                        ScopeOpen,
                        19,
                    ),
                    leading_trivia: None,
                },
                content: None,
                right: Some(
                    Node {
                        token: SpannedToken(
                            20,
                            ScopeClose,
                            21,
                        ),
                        leading_trivia: None,
                    },
                ),
            },
        ),
    },
]
