src/parser/snapshots/rbx_rsml__parser__tests__math_chained_add_sub.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                TokenIdentifier(
                    "Val",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            MathOperation {
                left: MathOperation {
                    left: MathOperation {
                        left: Node {
                            node: Node {
                                token: SpannedToken(
                                    7,
                                    Number(
                                        "1",
                                    ),
                                    8,
                                ),
                                leading_trivia: None,
                            },
                        },
                        operators: [
                            Node {
                                token: SpannedToken(
                                    9,
                                    OpAdd,
                                    10,
                                ),
                                leading_trivia: None,
                            },
                        ],
                        right: Some(
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        11,
                                        Number(
                                            "2",
                                        ),
                                        12,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                        ),
                    },
                    operators: [
                        Node {
                            token: SpannedToken(
                                13,
                                OpSub,
                                14,
                            ),
                            leading_trivia: None,
                        },
                    ],
                    right: Some(
                        Node {
                            node: Node {
                                token: SpannedToken(
                                    15,
                                    Number(
                                        "3",
                                    ),
                                    16,
                                ),
                                leading_trivia: None,
                            },
                        },
                    ),
                },
                operators: [
                    Node {
                        token: SpannedToken(
                            17,
                            OpAdd,
                            18,
                        ),
                        leading_trivia: None,
                    },
                ],
                right: Some(
                    Node {
                        node: Node {
                            token: SpannedToken(
                                19,
                                Number(
                                    "4",
                                ),
                                20,
                            ),
                            leading_trivia: None,
                        },
                    },
                ),
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    20,
                    SemiColon,
                    21,
                ),
                leading_trivia: None,
            },
        ),
    },
]
